--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="test">
+        <meta name="twitter:title" content="test">
+        <meta name="twitter:description" content="test">
+        <meta name="twitter:image" content="/image">
 	<title>Document</title>
 </head>
 <body>
