--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta name="twitter:site" content="test">
         <meta name="twitter:title" content="test">
         <meta name="twitter:description" content="test">
-        <meta name="twitter:image" content="/image">
+        <meta name="twitter:image" content="https://github.com/ilovebeatles/test/blob/master/test.png">
 	<title>Document</title>
 </head>
 <body>
 	<span style="font-size: 5em">Test</span>
+	<img src="https://github.com/ilovebeatles/test/blob/master/test.png"/>
 </body>
 </html>
