--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 	<span style="font-size: 5em">Test</span>
-	<img src="https://github.com/ilovebeatles/test/blob/master/test.png"/>
+	<img src="https://github.com/ilovebeatles/test/blob/master/test.png">
 </body>
 </html>
