--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="twitter:site" content="test">
         <meta name="twitter:title" content="test">
         <meta name="twitter:description" content="test">
-        <meta name="twitter:image" content="https://github.com/ilovebeatles/test/blob/master/test.png">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/ilovebeatles/test/master/test.png">
 	<title>Document</title>
 </head>
 <body>
 	<span style="font-size: 5em">Test</span>
-	<img src="https://github.com/ilovebeatles/test/blob/master/test.png">
+	<img src="https://raw.githubusercontent.com/ilovebeatles/test/master/test.png">
 </body>
 </html>
