--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="12345">
-        <meta name="twitter:title" content="12345">
-        <meta name="twitter:description" content="123456">
-        <meta name="twitter:image" content="https://raw.githubusercontent.com/ilovebeatles/test/master/test123.png?test12341test123test2">
+        <meta name="twitter:site" content="transparent">
+        <meta name="twitter:title" content="transparent">
+        <meta name="twitter:description" content="transparent">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/ilovebeatles/test/master/test-transparent.jpg">
 	<title>Document</title>
 </head>
 <body>
 	<span style="font-size: 5em">Test</span>
-	<img src="https://raw.githubusercontent.com/ilovebeatles/test/master/test123.png">
+	<img src="https://raw.githubusercontent.com/ilovebeatles/test/master/test-transparent.jpg">
 </body>
 </html>
